<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/floatingPlayerControl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#44000000"
    android:clipChildren="false"
    android:contentDescription="Floating player control">

...
            android:background="@drawable/bg_floating_control_button"
            android:src="@drawable/ic_music_note"
            android:contentDescription="Play as Music from floating player"
            android:scaleType="centerInside" />

        <ImageButton
            android:id="@+id/floatFullscreenButton"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="3dp"
            android:background="@drawable/bg_floating_control_button"
            android:src="@drawable/ic_fullscreen"
            android:contentDescription="Return to fullscreen"
...
